[gd_scene load_steps=11 format=3 uid="uid://dyxkg51bo2al2"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_5bj67"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/pause_ai.gd" id="2_qrwtg"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_t7nai"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_h6j32"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_hxxnx"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_ictlg"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_t68k5"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_2u31b"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_ty2h7"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_iouri"]

[node name="PauseAI" instance=ExtResource("1_5bj67")]
script = ExtResource("2_qrwtg")

[node name="vip" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_t7nai")
text = "TR_WHO"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="vip" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="vip" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="vip" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_h6j32")
texture_pressed = ExtResource("5_hxxnx")
texture_hover = ExtResource("6_ictlg")
texture_focused = ExtResource("6_ictlg")

[node name="anchor" type="Control" parent="vip/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="vip/picker_button/anchor" index="0" instance=ExtResource("7_t68k5")]

[node name="pause" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_t7nai")
text = "TR_PAUSE"
vertical_alignment = 1

[node name="pause_button" type="TextureButton" parent="pause" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_2u31b")
texture_pressed = ExtResource("9_ty2h7")
texture_hover = ExtResource("10_iouri")
texture_focused = ExtResource("10_iouri")

[node name="label" type="Label" parent="pause/pause_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_t7nai")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="vip/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="vip/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="vip/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="pressed" from="pause/pause_button" to="." method="_on_pause_button_pressed"]
